<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    >

                    <TextView
                        android:id="@+id/tv_daily_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/non_stop"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_arrow_down"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="20dp"
                        >

                        <ImageView
                            android:id="@+id/iv_arrow_down"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:srcCompat="@drawable/ic_arrow_down"
                            tools:ignore="ContentDescription"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_expanded"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_main"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    style="@style/ShapeApperance_custom_top"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:elevation="10dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    >

                    <TextView
                        android:id="@+id/tv_daily_name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/units1"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_arrow_up"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="20dp"
                        >

                        <ImageView
                            android:id="@+id/iv_arrow_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:srcCompat="@drawable/ic_arrow_up"
                            tools:ignore="ContentDescription"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_main"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_app_bar"
                    android:backgroundTint="@color/deep_sky_blue_100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_main"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:orientation="horizontal"
                            >


                            <TextView
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:text="@string/abonent_tolovi"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:id="@+id/tv_daily_abonent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:maxLines="1"
                                android:ellipsize="end"
                                android:layout_marginEnd="4dp"
                                android:text="@string/tolov"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:orientation="horizontal"
                            >


                            <TextView
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:text="@string/trafik"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                />
                            <TextView
                                android:id="@+id/tv_daily_internet"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:maxLines="1"
                                android:layout_marginEnd="4dp"
                                android:ellipsize="end"
                                android:text="@string/mobile_unit"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                />
                        </LinearLayout>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/mb_activation"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            app:strokeColor="@color/deep_sky_blue_400"
                            app:strokeWidth="1dp"
                            app:cornerRadius="16dp"
                            android:text="@string/activiation"
                            android:textColor="@color/black"
                            app:backgroundTint="@android:color/white"
                            />


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </layout>